--- a/markup/_layouts/_content/create-helmet-content.jade
+++ b/markup/_layouts/_content/create-helmet-content.jade
@@ -89,7 +89,7 @@ section.nl-section.nl-my-teams
                                         img(src='assets/img/letter/j.png', alt='')
                                 .letter
                                     a.pointer(onclick="showletter('k.png')")
-                                        img(src='assets/img/letter/k.png', alt='')
+                                        img(src='assets/img/letter/img-K.png', alt='')
                                 .letter
                                     a.pointer(onclick="showletter('l.png')")
                                         img(src='assets/img/letter/l.png', alt='')
