--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -23,12 +23,12 @@ div.nl-section.nl-create-team.homepage-field.soccer
 								p Buffon
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DL-position(data-position="DL")
-							img(src="assets/img/soccer/D-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Alves
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DR-position(data-position="DR")
-							img(src="assets/img/soccer/D-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Puyol
 								p.data.orange <span>12.67</span> <span>$42000</span>
@@ -38,22 +38,22 @@ div.nl-section.nl-create-team.homepage-field.soccer
 								p Kroos
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DM-position(data-position="DM")
-							img(src="assets/img/soccer/D-M.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ramos
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
-							img(src="assets/img/soccer/M-M.png" alt="goalkeeper")
+							img(src="assets/img/soccer/MM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Pogba
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
-							img(src="assets/img/soccer/M-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/MM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Vidal
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-ML-position(data-position="ML")
-							img(src="assets/img/soccer/M-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/ML.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Xavi
 								p.data.orange <span>12.67</span> <span>$42000</span>
@@ -63,12 +63,12 @@ div.nl-section.nl-create-team.homepage-field.soccer
 								p Van Persie
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AL-position(data-position="AL")
-							img(src="assets/img/soccer/A-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/AL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ronaldo
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AR-position(data-position="AR")
-							img(src="assets/img/soccer/A-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/AR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Messi
 								p.data.orange <span>12.67</span> <span>$42000</span>
