--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -18,42 +18,42 @@ div.nl-section.nl-create-team.homepage-field
 			div.nl-team-field.football
 				div.player-main-block.football
 					div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-						img(src="assets/img/football/FLEX.png" alt="FLEX")
+						img(src="assets/img/football/img-FLEX.png" alt="FLEX")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-K-position(data-position="K")
-						img(src="assets/img/football/K.png" alt="K")
+						img(src="assets/img/football/img-K.png" alt="K")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-LRB-position(data-position="LRB")
-						img(src="assets/img/football/LRB.png" alt="LRB")
+						img(src="assets/img/football/img-LRB.png" alt="LRB")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-RRB-position(data-position="RRB")
-						img(src="assets/img/football/RRB.png" alt="RRB")
+						img(src="assets/img/football/img-RRB.png" alt="RRB")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-QB-position(data-position="QB")
-						img(src="assets/img/football/QB.png" alt="QB")
+						img(src="assets/img/football/img-QB.png" alt="QB")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-LWR-position(data-position="LWR")
-						img(src="assets/img/football/LWR.png" alt="LWR")
+						img(src="assets/img/football/img-LWR.png" alt="LWR")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-RWR-position(data-position="RWR")
-						img(src="assets/img/football/RWR.png" alt="RWR")
+						img(src="assets/img/football/img-RWR.png" alt="RWR")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-TE-position(data-position="TE")
-						img(src="assets/img/football/TE.png" alt="TE")
+						img(src="assets/img/football/img-TE.png" alt="TE")
 						div.nl-player-block--data
 							p gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
