--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -294,56 +294,56 @@ section.nl-section.nl-players.nl-live-score
 					div.defender-line
 					div.player-main-block.football
 						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-							img(src="assets/img/football/FLEX.png" alt="FLEX")
+							img(src="assets/img/football/img-FLEX.png" alt="FLEX")
 							div.nl-player-block--data
 								
 								p.played gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-K-position(data-position="K")
-							img(src="assets/img/football/K.png" alt="K")
+							img(src="assets/img/football/img-K.png" alt="K")
 							div.nl-player-block--data
 								
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-LRB-position(data-position="LRB")
-							img(src="assets/img/football/LRB.png" alt="LRB")
+							img(src="assets/img/football/img-LRB.png" alt="LRB")
 							div.nl-player-block--data
 								
 								p.playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-RRB-position(data-position="RRB")
-							img(src="assets/img/football/RRB.png" alt="RRB")
+							img(src="assets/img/football/img-RRB.png" alt="RRB")
 							div.nl-player-block--data
 								
 								p.played gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-QB-position(data-position="QB")
-							img(src="assets/img/football/QB.png" alt="QB")
+							img(src="assets/img/football/img-QB.png" alt="QB")
 							div.nl-player-block--data
 								
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-LWR-position(data-position="LWR")
-							img(src="assets/img/football/LWR.png" alt="LWR")
+							img(src="assets/img/football/img-LWR.png" alt="LWR")
 							div.nl-player-block--data
 								
 								p.not-playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-RWR-position(data-position="RWR")
-							img(src="assets/img/football/RWR.png" alt="RWR")
+							img(src="assets/img/football/img-RWR.png" alt="RWR")
 							div.nl-player-block--data
 								
 								p.playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-TE-position(data-position="TE")
-							img(src="assets/img/football/TE.png" alt="TE")
+							img(src="assets/img/football/img-TE.png" alt="TE")
 							div.nl-player-block--data
 								
 								p gronkowski
