--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -4,11 +4,11 @@ mixin repeat(times)
 			div.matches__content
 				ul.matches__leaders-list
 					li
-						span <img src="assets/img/emblem/MU.png" alt="MU">
+						span <img src="assets/img/emblem/MU.png" alt="MU" class="soccer-logo">
 						span RMA
 						span 2
 					li
-						span <img src="assets/img/emblem/FCB.png" alt="MU">
+						span <img src="assets/img/emblem/FCB.png" alt="MU" class="soccer-logo">
 						span FCB
 						span 1
 			div.matches__result-header
@@ -51,7 +51,7 @@ mixin list-of-teams(times)
 						p My Best Soccer Team
 						p.italic NLC2 Kasper 
 					div.rank__thumb
-						img(src="assets/img/soccer/A-R.png", alt="")
+						img(src="assets/img/soccer/AR.png", alt="")
 				table.table.table-info3
 					thead
 						tr
@@ -308,13 +308,13 @@ section.nl-section.nl-players.nl-live-score.soccer
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DL-position(data-position="DL")
-							img(src="assets/img/soccer/D-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DR-position(data-position="DR")
-							img(src="assets/img/soccer/D-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.not-playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
@@ -326,25 +326,25 @@ section.nl-section.nl-players.nl-live-score.soccer
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DM-position(data-position="DM")
-							img(src="assets/img/soccer/D-M.png" alt="goalkeeper")
+							img(src="assets/img/soccer/DM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
-							img(src="assets/img/soccer/M-M.png" alt="goalkeeper")
+							img(src="assets/img/soccer/MM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
-							img(src="assets/img/soccer/M-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/MM.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-ML-position(data-position="ML")
-							img(src="assets/img/soccer/M-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/ML.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
@@ -356,13 +356,13 @@ section.nl-section.nl-players.nl-live-score.soccer
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-AL-position(data-position="AL")
-							img(src="assets/img/soccer/A-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/AL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-AR-position(data-position="AR")
-							img(src="assets/img/soccer/A-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/AR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
