image names soccer flex shirts

--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -57,7 +57,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
-							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
@@ -82,7 +82,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
-							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
