--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -320,7 +320,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
-							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
@@ -350,7 +350,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
-							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.not-playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
