--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -33,7 +33,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 								p Puyol
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
-							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXL.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Kroos
 								p.data.orange <span>12.67</span> <span>$42000</span>
@@ -58,7 +58,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 								p Xavi
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
-							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEXR.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p Van Persie
 								p.data.orange <span>12.67</span> <span>$42000</span>
