desktop version of new top 5

--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -148,27 +148,29 @@ div.tab-content(id="top5-player-content")
 									div.col-7.no-padding
 										div.new-above-table
 											h3.rank-number rank 1 
-											h3.player-name A Great Playerrrr
+											div.row
+												div.col-12.text-center
+													h3.player-name DeAndre Hopkins
 											div.row.player-stats
 												div.col-4.no-padding
 													img#top-player-nav(src='assets/img/player1-new.png')
 												div.col-4.player-data
 													//- h3 Team
 													//- h3.orange.inline-block CHI
-													p Team
+													p.title TEAM
 													p.orange Patriots
 													//- h3 Pos
 													//- h3.orange.inline-block RB
-													p Pos
+													p.title POS
 													p.orange RB
 												div.col-4.player-data
 													//- h3 Salary 
 													//- h3.orange.inline-block $3200
 													//- h3 Score 
 													//- h3.orange.inline-block 13.4
-													p Salary 
+													p.title SALARY 
 													p.orange $3200
-													p Score 
+													p.title SCORE 
 													p.orange 13.4
 										div.tab-content
 											table.table.table-striped.new-top5-table
@@ -240,7 +242,7 @@ div.tab-content(id="top5-player-content")
 														td $0
 														td 765
 
-									div.col-5.new-news-player
+									div.col-4.new-news-player
 										h5 Todd Gurley Bounces Back In Victory Over Jags
 										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
 										p
