--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10757,13 +10757,22 @@ p {
 
 .nl-section.homepage {
   padding: 1.5rem 2.25rem; }
+  .nl-section.homepage .new-top5-players-container .tab-content {
+    overflow: hidden;
+    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    border-bottom-left-radius: 0.625rem; }
   .nl-section.homepage .new-top5-players-container .new-above-table {
+    border-top-left-radius: 0.625rem;
     background: #061540; }
+    .nl-section.homepage .new-top5-players-container .new-above-table .player-stats {
+      text-align: center; }
     .nl-section.homepage .new-top5-players-container .new-above-table .row {
       margin: 0; }
     .nl-section.homepage .new-top5-players-container .new-above-table img {
       width: auto;
-      display: inline-block; }
+      display: inline-block;
+      margin-top: -20px; }
     .nl-section.homepage .new-top5-players-container .new-above-table h3 {
       font-size: 1.45rem;
       line-height: 1rem;
@@ -10780,27 +10789,27 @@ p {
       padding: 0;
       color: white;
       line-height: 1rem; }
+    .nl-section.homepage .new-top5-players-container .new-above-table p.title {
+      font-weight: 400;
+      font-size: 11px; }
     .nl-section.homepage .new-top5-players-container .new-above-table h3.rank-number {
-      width: 87px;
-      height: 20px;
+      width: 84px;
+      height: 14px;
       background: -webkit-gradient(linear, left top, left bottom, from(#e89608), to(#e37606));
       background: linear-gradient(to bottom, #e89608 0%, #e37606 100%);
-      line-height: 1.3rem;
+      line-height: 0.9rem;
       text-align: center;
       color: white;
       border-radius: 0;
       position: absolute;
-      top: 78px;
-      left: 15px;
+      top: 92px;
+      left: 34px;
       z-index: 2;
-      font-size: 20px;
+      font-size: 15px;
       font-weight: 600; }
     .nl-section.homepage .new-top5-players-container .new-above-table h3.player-name {
-      position: absolute;
-      top: 79px;
-      left: 115px;
-      z-index: 2;
-      font-size: 20px; }
+      font-size: 19px;
+      padding: 10px 0; }
   .nl-section.homepage .new-top5-players-container .new-top5-table thead th, .nl-section.homepage .new-top5-players-container .new-top5-table td {
     padding: 0.25rem;
     text-align: center;
@@ -10808,21 +10817,31 @@ p {
   .nl-section.homepage .new-top5-players-container .new-top5-table thead th {
     background: #0f254f; }
   .nl-section.homepage .new-top5-players-container .player-data {
-    padding: 5px 0 29px 0;
+    padding: 0;
     text-align: center; }
+    .nl-section.homepage .new-top5-players-container .player-data p {
+      font-size: 15px;
+      font-weight: 500; }
   .nl-section.homepage .new-top5-players-container .new-news-player {
     background: #0f254f;
     border-left: 3px solid orange;
     color: white;
     padding: 10px;
-    margin-left: -17px; }
+    margin-left: -17px;
+    overflow: hidden;
+    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    border-radius: 0 0.625rem 0.625rem 0; }
     .nl-section.homepage .new-top5-players-container .new-news-player h5 {
       color: orange;
       font-size: 12px;
       line-height: 1rem; }
     .nl-section.homepage .new-top5-players-container .new-news-player p {
       font-size: 11px;
-      line-height: 1rem; }
+      line-height: 1rem;
+      margin-bottom: 0.75rem; }
+      .nl-section.homepage .new-top5-players-container .new-news-player p a {
+        text-decoration: underline; }
   .nl-section.homepage .points-in-bar {
     display: none; }
   .nl-section.homepage .player-info h5 {
