--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -463,10 +463,25 @@
 
   .new-top5-players-container {
 
+    .tab-content {
+      overflow: hidden;
+      -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+      box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+      border-bottom-left-radius: 0.625rem;
+      //margin-bottom: 2.25rem;
+    }
+
     .new-above-table {
+
+      border-top-left-radius: 0.625rem;
+
+      .player-stats {
+        text-align: center;
+      }
 
       .row {
         margin: 0;
+        //padding-top: 15px;
       }
 
       background: #061540;
@@ -474,6 +489,7 @@
       img {
         width: auto;
         display: inline-block;
+        margin-top: -20px;
       }
 
       h3 {
@@ -498,28 +514,30 @@
         line-height: 1rem;
       }
 
+      p.title {
+        font-weight: 400;
+        font-size: 11px;
+      }
+
       h3.rank-number {
-        width: 87px;
-        height: 20px;
+        width: 84px;
+        height: 14px;
         background: -webkit-gradient(linear, left top, left bottom, from(#e89608), to(#e37606));
         background: linear-gradient(to bottom, #e89608 0%, #e37606 100%);
-        line-height: 1.3rem;
+        line-height: 0.9rem;
         text-align: center;
         color: white;
         border-radius: 0;
         position: absolute;
-        top: 78px;
-        left: 15px;
+        top: 92px;
+        left: 34px;
         z-index: 2;
-        font-size: 20px;
+        font-size: 15px;
         font-weight: 600;
       }
       h3.player-name {
-        position: absolute;
-        top: 79px;
-        left: 115px;
-        z-index: 2;
-        font-size: 20px;
+        font-size: 19px;
+        padding: 10px 0;
       }
     }
 
@@ -536,8 +554,12 @@
     }
 
     .player-data {
-      padding: 5px 0 29px 0;
-      text-align: center;      
+      padding: 0;
+      text-align: center;
+      p {
+        font-size: 15px;
+        font-weight: 500;
+      }     
     }
 
     .new-news-player {
@@ -546,6 +568,10 @@
       color: white;
       padding: 10px;
       margin-left: -17px;
+      overflow: hidden;
+      -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+      box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+      border-radius: 0 0.625rem 0.625rem 0;
 
       h5 {
         color: orange;
@@ -556,6 +582,12 @@
       p {
         font-size: 11px;
         line-height: 1rem;
+        margin-bottom: 0.75rem;
+
+        a {
+          text-decoration: underline;
+          //color: orange
+        }
       }
     }
   }
